--- a/index.html
+++ b/index.html
@@ -580,15 +580,18 @@ materials.
 					    <h2 class="heading">Certifications</h2>
 
 						      	<div style="display: flex;" style="width:100%" class="imgflex">
-						      		<img class="imghw" src="images/Agile_Methodology_Virtual_Experience.png"><span>&nbsp;&nbsp;</span>
-						      		<img class="imghw" src="images/Introduction_to_Campus_Recruitment.png"><span>&nbsp;&nbsp;</span>
-						      		<img class="imghw" src="images/Human_Resources_Analytics.png">
+						      		<a href="https://forage-uploads-prod.s3.amazonaws.com/completion-certificates/Cognizant/ZZswQd6xGydd758vz_Cognizant_MyqJgujeMLnMjBwwC_1688224630569_completion_certificate.pdf"><img class="imghw" src="images/Agile_Methodology_Virtual_Experience.png"></a><span>&nbsp;&nbsp;</span>
+
+						      		<a href="https://forage-uploads-prod.s3.amazonaws.com/completion-certificates/Forage/j5gPbDQfzjC6EYmMW_Forage_MyqJgujeMLnMjBwwC_1686917857280_completion_certificate.pdf"><img class="imghw" src="images/Introduction_to_Campus_Recruitment.png"></a><span>&nbsp;&nbsp;</span>
+
+						      		<a href="https://www.coursera.org/account/accomplishments/certificate/MZ5WEJXETUXD"><img class="imghw" src="images/Human_Resources_Analytics.png"></a>
 						      		
 						      	</div>
 						      	<br/>
 						      	<div style="display: flex;" style="width:100%" class="imgflex">
-						      		<img class="imghw" src="images/Quantitative_Research_Virtual_Experience.png"><span>&nbsp;&nbsp;</span>
-						      		<img class="imghw" src="images/Explore_Human_Resources_Virtual_Experience.png">
+						      		<a href="https://forage-uploads-prod.s3.amazonaws.com/completion-certificates/J.P.%20Morgan/bWqaecPDbYAwSDqJy_JPMorgan%20Chase%20&%20Co._MyqJgujeMLnMjBwwC_1687861184413_completion_certificate.pdf"><img class="imghw" src="images/Quantitative_Research_Virtual_Experience.png"></a><span>&nbsp;&nbsp;</span>
+
+						      		<a href="https://forage-uploads-prod.s3.amazonaws.com/completion-certificates/GE%20Aerospace/bAPubTkawzGexc6TT_GE%20Aerospace_MyqJgujeMLnMjBwwC_1685811059535_completion_certificate.pdf"><img class="imghw" src="images/Explore_Human_Resources_Virtual_Experience.png"></a>
 						      		
 						      	</div>
 
